fix/footer_style: resolve footer styling on small screens
Resolved footer styling on small screen after adding more social links.

--- a/src/sass/components/common.sass
+++ b/src/sass/components/common.sass
@@ -120,5 +120,6 @@ body
       &:hover
         background-position: -60px -60px
 
-.app-footer .app-footer-r.top
-  width: 840px
+@media screen and (min-width: $lg-width)
+  .app-footer .app-footer-r.top
+    width: 840px
